--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1066,27 +1066,27 @@
   .section-title-wrap .wrap-btn {
     display: none;
   }
-  .seku-new-nav-area .others-option {
+  .Randstad Technologies-new-nav-area .others-option {
     margin-left: 0;
     position: absolute;
     right: 50px;
     top: 20px;
   }
-  .seku-new-nav-area .others-option .option-item .search-btn {
+  .Randstad Technologies-new-nav-area .others-option .option-item .search-btn {
     color: #ffffff;
   }
-  .seku-new-nav-area .others-option .option-item .close-btn {
+  .Randstad Technologies-new-nav-area .others-option .option-item .close-btn {
     color: #ffffff;
     position: relative;
     top: 2.5px;
   }
-  .seku-new-nav-area .others-option .option-item .close-btn.active {
+  .Randstad Technologies-new-nav-area .others-option .option-item .close-btn.active {
     color: #ffffff;
   }
-  .seku-new-nav-area .others-option .option-item .default-btn {
+  .Randstad Technologies-new-nav-area .others-option .option-item .default-btn {
     display: none;
   }
-  .seku-new-nav-area .others-option .option-item .search-overlay.search-popup {
+  .Randstad Technologies-new-nav-area .others-option .option-item .search-overlay.search-popup {
     width: 195px;
   }
   .new-main-banner-slides-item .container-fluid {
@@ -2070,24 +2070,24 @@
   .section-title-wrap .wrap-btn {
     display: none;
   }
-  .seku-new-nav-area .others-option {
+  .Randstad Technologies-new-nav-area .others-option {
     margin-left: 0;
     position: absolute;
     right: 65px;
     top: 12px;
   }
-  .seku-new-nav-area .others-option .option-item .search-btn {
+  .Randstad Technologies-new-nav-area .others-option .option-item .search-btn {
     color: #ffffff;
   }
-  .seku-new-nav-area .others-option .option-item .close-btn {
+  .Randstad Technologies-new-nav-area .others-option .option-item .close-btn {
     color: #ffffff;
     position: relative;
     top: 2.5px;
   }
-  .seku-new-nav-area .others-option .option-item .close-btn.active {
+  .Randstad Technologies-new-nav-area .others-option .option-item .close-btn.active {
     color: #ffffff;
   }
-  .seku-new-nav-area .others-option .option-item .search-overlay.search-popup {
+  .Randstad Technologies-new-nav-area .others-option .option-item .search-overlay.search-popup {
     width: 395px;
   }
   .new-main-banner-slides-item .container-fluid {
@@ -2436,11 +2436,11 @@
     margin-left: 10px;
   }
   /* New Demo Responsive CSS */
-  .seku-new-nav-area .navbar-area .main-nav nav .navbar-nav .nav-item a {
+  .Randstad Technologies-new-nav-area .navbar-area .main-nav nav .navbar-nav .nav-item a {
     font-size: 15px;
     margin: 0 8px;
   }
-  .seku-new-nav-area .others-option {
+  .Randstad Technologies-new-nav-area .others-option {
     margin-left: 10px;
   }
   .new-main-banner-content {
@@ -2676,7 +2676,7 @@ Continuer Custom Width Area Style*/
 /* Min width 1550px */
 @media only screen and (min-width: 1550px) {
   /* New Demo Responsive CSS */
-  .seku-new-nav-area .container-fluid {
+  .Randstad Technologies-new-nav-area .container-fluid {
     padding-left: 100px;
     padding-right: 100px;
   }
